
2017-09-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_abort_msg): output orig_program_id instead of C-converted
	* codegen.c (codegen): adjust current_program used for error messages during
	  code generation of nested programs

2017-09-22  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c (cb_set_intr_when_compiled): #436 fixed timezone printf format
	* cobc.c (cobc_enum_explain): added missing tags

2017-09-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: ensure correct order of the programs during processing
	* codegen.c (output_param): added missing check after calling (cb_ref)
	  to prevent SIGSEGV, see Bug #435
	* typeck.c, tree.c: checked result of (cb_ref) where missing

2017-09-18  Ron Norman <rjn@inglenet.com>

	* codegen.c:
	  Emit Decimal Constants for all module types

2017-09-16  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y, config.def: added free-redefines-position config option.

2017-09-10  Edward Hart <edward.dan.hart@gmail.com>

	* tree.c (cb_int): corrected bitmask.
	* config.def, typeck.c: added line-col-zero-default and display-special-
	  fig-consts options. This reinstates GnuCOBOL's previous behaviour of
	  DISPLAYing a field on screen at the current position of the cursor and
	  disabling the MF DISPLAY SPACES extension.
	* parser.y: increase number of places which accept ZERO (including SIZE
	  clause).

2017-09-05  Edward Hart <edward.dan.hart@gmail.com>

	* tree.c (cb_int): add bitmask to suppress runtime loss-of-data warning
	  on Windows.

2017-09-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_validate_program_data): temporarily disabled ASSIGN
	  fields with changing address (BASED + LINKAGE) to prevent SIGSEGV
	  until code generation is changed, see bug #421
	* codegen.c: changed generated newlines/comments for file initialization

2017-09-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
